Canvas align fixed

--- a/estilos.css
+++ b/estilos.css
@@ -24,7 +24,12 @@ div{
 	float: right;
 	color: white;
 }
-
+/*"rgba(67,166,196,0)"*/
 #canvas1{
-	background: "rgba(67,166,196,0)";
+	background:"rgba(67,166,196,0)";
+	padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
